# Gimp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci_check.yml
Pencils/: Pencil_Circle.cpp  Pencil_Square.cpp
include/: Logger.h  Logger.hpp  const.hpp
include/App/: App.hpp  Calque.hpp  DrawApp.hpp  TopBar.hpp  const.hpp
include/App/CalqueMenu/: CalqueButton.hpp  CalqueMenu.hpp  PercentageSelector.hpp
include/App/DrawApp/: DrawApp.hpp
include/App/Popup/: PopupFolder.hpp
include/App/TopBar/: Button.hpp  TopBar.hpp  TopButton.hpp  TopButtonsDropDown.hpp
include/Exceptions/: CalqueExceptions.hpp  DrawAppExceptions.hpp  Exceptions_A.hpp
src/: App.cpp  App.hpp  Logger.cpp
src/App/: App.cpp  App.hpp  Calque.cpp  Calque.hpp  DrawApp.cpp  Logger.cpp  TopBar.cpp  dlLoader.hpp
src/App/CalqueMenu/: CalqueButton.cpp  CalqueMenu.cpp  CalqueMenu.hpp  PercentageSelector.cpp  PercentageSelector.hpp
src/App/ColorPicker/: ColorPicker.cpp  ColorPicker.hpp
src/App/DrawApp/: DrawApp.cpp  DrawApp.hpp  DrawApp_Calques.cpp  DrawApp_Draw.cpp  DrawApp_Events.cpp  DrawApp_Export.cpp  DrawApp_HandleCommand.cpp  DrawApp_Paint.cpp  DrawApp_Pencils.cpp  DrawApp_Save.cpp  DrawApp_Update.cpp
src/App/Pencil/: Pencil_A.cpp  Pencil_A.hpp  Pencil_Circle.cpp  Pencil_Circle.hpp  Pencil_I.hpp  Pencil_Simple.cpp  Pencil_Simple.hpp  Pencil_Square.cpp  Pencil_Square.hpp
src/App/PencilMenu/: PencilMenu.cpp  PencilMenu.hpp
src/App/Popup/: PopupFolder.cpp
src/App/TopBar/: Button.cpp  TopBar.cpp  TopButton.cpp  TopButtonsDropDown.cpp
src/MainApp/App/: App.cpp  Calque.cpp  Calque.hpp  Logger.hpp  dlLoader.hpp
src/MainApp/App/CalqueMenu/: CalqueButton.hpp
src/MainApp/App/ColorPicker/: ColorPicker.cpp
src/MainApp/App/DrawApp/: DrawApp.cpp  DrawApp.hpp  DrawApp_Calques.cpp  DrawApp_Draw.cpp  DrawApp_Events.cpp  DrawApp_Export.cpp  DrawApp_HandleCommand.cpp  DrawApp_Load.cpp  DrawApp_Paint.cpp  DrawApp_Pencils.cpp  DrawApp_Save.cpp
src/MainApp/App/Pencil/: Pencil_A.cpp  Pencil_A.hpp
src/MainApp/App/Popup/: PopupFolder.cpp
src/MainApp/App/TopBar/: Button.hpp  TopBar.cpp
src/Plugins/Pencils/: Pencil_Blur.cpp  Pencil_Blur.hpp  Pencil_Brightness.cpp  Pencil_Brightness.hpp  Pencil_Bucket.cpp  Pencil_Bucket.hpp  Pencil_Circle.cpp  Pencil_Circle.hpp  Pencil_Contrast.cpp  Pencil_Contrast.hpp  Pencil_Grayscale.cpp  Pencil_Grayscale.hpp  Pencil_Invert.cpp  Pencil_Invert.hpp  Pencil_Sepia.cpp  Pencil_Sepia.hpp  Pencil_Square.cpp  Pencil_Square.hpp
tests/: test_Button.cpp  test_CalqueMenu.cpp  test_Calque_Erase.cpp  test_Calques.cpp  test_DrawApp.cpp  test_DrawApp_Paint.cpp  test_PencilMenu.cpp  test_Pencils.cpp  test_PercentageSelector.cpp  test_PopupFolder.cpp  test_TopButton.cpp  test_test.cpp
